oauth google done

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,8 +5,8 @@
   <title>Event</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://accounts.google.com/gsi/client" async></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
   <app-root></app-root>
